external link issue

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 					    </p>
 					    <p>
 						<i class="fab fa-github" aria-hidden="true"></i>
-						<a href="github.com/Sulfurous-Impersonation">Sulfurous-Impersonation</a>
+						<a href="https://github.com/Sulfurous-Impersonation">Sulfurous-Impersonation</a>
 					    </p>
 					    <p>
 						<i class="fab fa-itch-io" aria-hidden="true"></i>
-						<a href="sulfurous.itch.io/">Jollista</a>
+						<a href="https://sulfurous.itch.io/">Jollista</a>
 						
 						<br>
 						<br>
