edited webpage title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link href="style.css" rel="stylesheet">
-		<title>Juniper Watson resume</title>
+		<title>Juniper Watson - Resume</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	</head>
 
@@ -22,11 +22,11 @@
 					    </p>
 					    <p>
 						<i class="fab fa-github" aria-hidden="true"></i>
-						<a href="https://github.com/Sulfurous-Impersonation">Sulfurous-Impersonation</a>
+						<a href="https://github.com/Sulfurous-Impersonation/">Sulfurous-Impersonation</a>
 					    </p>
 					    <p>
 						<i class="fab fa-itch-io" aria-hidden="true"></i>
-						<a href="https://sulfurous.itch.io/">Jollista</a>
+						<a href="https://sulfurous.itch.io">Jollista</a>
 						
 						<br>
 						<br>
@@ -53,7 +53,7 @@
 					<p>
 						I'm June, a computer science student at Cal Poly Pomona. 
 						When I was a kid, I wanted to make videogames, so I got into programming, and now I'm here.
-						I love programming and I think I'm pretty good at it.
+						I love programming and I think I'm pretty ok at it.
 					</p>
 				</section>
 				<section>
